--- a/elestio.yml
+++ b/elestio.yml
@@ -8,6 +8,8 @@ ports:
     path: "/"
     isAuth: false
 environments:
+  - key: "ADMIN_PASSWORD"
+    value: "random_password"
 
 config:
   runTime: "dockerCompose"
