--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.3'
+version: "3.3"
 services:
-    app:
-        image: gabekangas/owncast:latest
-        restart: always
-        volumes:
-            - './data:/app/data'
-        ports:
-            - '172.17.0.1:5050:8080'
-            - '1935:1935'
+  app:
+    image: owncast/owncast:latest
+    restart: always
+    volumes:
+      - "./data:/app/data"
+    ports:
+      - "172.17.0.1:5050:8080"
+      - "1935:1935"
